<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LogInFragment"
    android:background="@drawable/gradient">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/ocean_logo_size"
        android:layout_height="@dimen/ocean_logo_size"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/ocean_logo"
        android:src="@drawable/ocean_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/email_edit_text"
        style="@style/LogInField"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/password_edit_text"
        style="@style/LogInField"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text" />

    <EditText
        android:id="@+id/confirm_password_edit_text"
        style="@style/LogInField"
        android:visibility="gone"
        android:hint="@string/confirm_password"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />

    <TextView
        android:id="@+id/error_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/error_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_edit_text"
        tools:text="Error text" />

    <ImageView
        android:layout_width="@dimen/input_icon_size"
        android:layout_height="@dimen/input_icon_size"
        android:src="@drawable/user_icon"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/email_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/email_edit_text"
        app:layout_constraintTop_toTopOf="@+id/email_edit_text" />
    <ImageView
        android:layout_width="@dimen/input_icon_size"
        android:layout_height="@dimen/input_icon_size"
        android:src="@drawable/password_icon"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/password_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/password_edit_text"
        app:layout_constraintTop_toTopOf="@+id/password_edit_text" />
    <ImageView
        android:id="@+id/confirm_password_icon"
        android:layout_width="@dimen/input_icon_size"
        android:layout_height="@dimen/input_icon_size"
        android:src="@drawable/password_icon"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/confirm_password_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/confirm_password_edit_text"
        app:layout_constraintTop_toTopOf="@+id/confirm_password_edit_text" />

    <Button
        android:id="@+id/log_in_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        style="@style/AppButton"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>