<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fielddetails.FieldDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/field_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Field name"
            android:background="@drawable/field_name_shape"
            android:padding="8dp"
            android:textSize="26sp"
            android:textStyle="bold"
            />

        <GridLayout
            android:id="@+id/field_grid"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/field_name"
            android:columnCount="10"
            android:rowCount="10">
        </GridLayout>

        <TextView
            android:id="@+id/field_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/field_grid"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/field_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:theme="@style/FieldMenu"
            android:padding="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/field_hint">

            <RatingBar
                android:id="@+id/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:progressTint="@color/white"
                />

            <TextView
                android:id="@+id/robots_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textColor="@color/white"
                android:text="10 robots working"
                android:layout_marginLeft="16dp"
                app:layout_constraintBaseline_toBaselineOf="@id/send_robots_button"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteY="96dp" />

            <Button
                android:id="@+id/send_robots_button"
                style="@style/AppButtonDark"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:text="@string/send_robots"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rating_bar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/field_menu">

            <TextView
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moisture"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="fitCenter"
                android:src="@drawable/moisture"
                android:contentDescription="@string/moisture_image" />

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="fitCenter"
                android:src="@drawable/moisture"
                android:contentDescription="@string/moisture_image" />

            <TextView
                android:id="@+id/field_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                tools:text="Field description"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>